--- a/power-compiler/package.json
+++ b/power-compiler/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"start": "http-server dist/"
+		"start": "http-server dist/ --port 18922"
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
